@@ -1,6 +1,8 @@
 1.17
  * ID3: Support for the iTunes non-standard TSO2 and TSOC frames.
  * EasyID3: Extension API for defining new "easy" tags at runtime.
+ * mutagen.File: New 'easy=True' argument to create new EasyMP3,
+   EasyTrueAudio, and EasyID3FileType instances.
 
 1.16 - 2009.06.15
  * Website / code repository move.
